# libfedlearn

./: .gitignore  CMakeLists.txt  README.md  install_guide.md
include/: DistributedPaillierHepler.h  DistributedPaillier_dist_paillier_privkey.h  DistributedPaillier_dist_paillier_prvkey.h  DistributedPaillier_dist_paillier_pubkey.h  DistributedPaillier_signed_byteArray.h  com_jdt_fedlearn_core_encryption_distributedPaillier_DistributedPaillierNative.h  com_jdt_fedlearn_core_encryption_distributedPaillier_DistributedPaillierNative_old.h  cppWrapper.hpp  distributed_paillier.h  logger.h  shamir_secret_sharing.h  shamir_secret_sharing_integer.h
src/: DistributedPaillier.cpp  Makefile  distributed_paillier.cpp  log.cpp  shamir_secret_sharing.cpp  shamir_secret_sharing_integer.cpp
test/: test_distributed_key_gene.cpp  test_standalone_key_gene.cpp
tests/: test_distributed_key_gene.cpp  test_shamir_share.cpp  test_standalone_key_gene.cpp
third_party_lib/libntl/include/NTL/: ConfigLog.h
third_party_lib/ntl-main/src/: MakeDesc  TestGetPID  TestGetTime  gen_gmp_aux  gf2x_version_1_2_or_later_required  makefile
